# calculator

./: .gitignore  .gitlab-ci.yml  Ast.cpp  Ast.hpp  BaseVisitor.cpp  BaseVisitor.h  BaseVisitor.hpp  CMakeLists.txt  CalculatorVisitor.cpp  CalculatorVisitor.hpp  Evaluator.cpp  Evaluator.hpp  LICENSE.txt  README.md  grammar.lex  grammar.y  main.cpp
cmake/: qt_functions.cmake
src/: Ast.cpp  Ast.hpp  BaseVisitor.cpp  BaseVisitor.hpp  CMakeLists.txt  CalculatorVisitor.cpp  Evaluator.cpp  grammar.lex
test/: CMakeLists.txt  main.cpp
test/data/: simple.test
